fixed min sizing of line numbers and main page elements when they are empty to fix the empty white space that shows up if page isn't overfilled with content

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ body {
 	float: left;
 	position: absolute;
 	height: 100%;
+	min-height: 99vh;
 	top: 5px;
 	bottom: 5px;
 	width: 45px;
@@ -127,6 +128,7 @@ body {
 	background-color: #282923;
 	width:100%;
 	height: 100%;
+	min-height: 96vh;
 }
 .CodeWindowTextBlock {
 	display: flex;
